objects/Watch__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyd</fullName>
                </value>
                <value>
                    <fullName>Banglore</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Vijayawada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Watch</label>
    <nameField>
        <label>Watch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Watches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>